--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         }
     },
     "autoload": {
+        "files": ["app/Helpers/function.php"],
         "psr-4": {
             "App\\": "app/"
         },
@@ -43,6 +44,7 @@
         ]
     },
     "autoload-dev": {
+        
         "psr-4": {
             "Tests\\": "tests/"
         }
